package Geometry;
public enum Main {
    GAUCHE,
    DROITE
}
